--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,18 @@ services:
     deploy:
       replicas: 1
 
+  elasticmq:
+    image: softwaremill/elasticmq
+    ports:
+      - 9324:9324
+      - 9325:9325
+    volumes:
+      - /c/workspace/onlibrary/onlibrary-services/elasticmq/elasticmq.conf://opt/elasticmq.conf
+    networks:
+      - onlibrary-network
+    deploy:
+      replicas: 1
+
 networks:
   onlibrary-network:
 
